--- a/updated-tags.html
+++ b/updated-tags.html
@@ -20,7 +20,7 @@
       	<div class="dropdown">
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
-      			<a href="">1</a>
+      			<a href="elements.html">Elements</a>
       			<a href="">2</a>
       			<a href="">3</a>
       			<a href="">4</a>
