--- a/box-model.html
+++ b/box-model.html
@@ -265,7 +265,48 @@
             </p>
           </div>
         </section>
-      </article>
+        <section>
+          <h3>Centering Content</h3>
+          <h4>Center an entire block-level tag</h4>
+          <p>
+          	If you want to center an entire block-level tag and that tag is 
+          	fixed width, then you can set the left and right margins of that tag
+          	to <i>auto</i>.
+          </p>
+          <h5>CSS</h5>
+          <div class="code-wrapper">
+            <p>
+            	<i>.class</i> {<br>
+      				&nbsp;&nbsp;margin: 0 auto 0 auto;<br>
+   						}
+   					</p>
+   					<p>
+   						<i>element</i> {<br>
+   						&nbsp;&nbsp;margin: 0 auto 0 auto;<br>
+   						}
+   					</p>
+   					<p>
+            	h1 {<br>
+        			&nbsp;&nbsp;margin: 0 auto 0 auto;<br>
+       				}
+       			</p>
+   				</div>
+   				<h4>Center the content that's inside of a block-level tag</h4>
+   				<p>
+   					If you want to center the content that's inside of a block-level 
+   					tag, then you want to set the <i>text-align</i> property to 
+   					<i>center</i>.
+   				</p>
+   				<h5>CSS</h5>
+          <div class="code-wrapper">
+            <p>
+            	h1 {<br>
+        			&nbsp;&nbsp;text-align: center;<br>
+       				}
+       			</p>
+       		</div>
+       	</section>
+			</article>
     </main>
     <footer>
       <a href="">
