--- a/images.html
+++ b/images.html
@@ -45,7 +45,7 @@
       			<a href="selectors.html">Selectors</a>
       			<a href="color.html">Color</a>
       			<a href="box-model.html">Box Model</a>
-      			<a href="">4</a>
+      			<a href="fonts.html">Fonts</a>
       			<a href="">5</a>
       			<a href="">6</a>
       		</div>
