--- a/images.html
+++ b/images.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Front-end Web Development</h1>
+			<h1>HTML5Tech</h1>
 			<nav>
       	<a href="home.html">Home</a>
       	<div class="dropdown">
