--- a/color.html
+++ b/color.html
@@ -15,6 +15,7 @@
 	<body>
 		<header>
 			<h1>HTML5Tech</h1>
+			<h2>Fundamental resources about HTML5 &amp; friends.</h2>
 			<nav>
       	<a id="current" href="home.html">Home</a>
       	<div class="dropdown">
