Style main heading and tagline

--- a/box-model.html
+++ b/box-model.html
@@ -15,7 +15,9 @@
 	<body>
 		<header>
 			<h1>HTML5Tech</h1>
-			<h2>Fundamental resources about HTML5 &amp; friends.</h2>
+			<div class="tagline">
+				<h4>Fundamental resources about HTML5 &amp; friends</h4>
+			</div>
 			<nav>
       	<a id="current" href="home.html">Home</a>
       	<div class="dropdown">
