--- a/new-elements.html
+++ b/new-elements.html
@@ -1,8 +1,21 @@
-<!-- 
-	Author: PictureElement
-	Description: This page demonstrates some new features of HTML5 
-	Date: 28.02.2017
--->
+<!--
+	new-elements.html
+ 	Copyright (C) 2017  Marios Sofokleous
+  
+  This program is free software; you can redistribute it and/or modify it under 
+  the terms of the GNU General Public License as published by the Free Software 
+  Foundation; either version 3 of the License, or (at your option) any later 
+  version. 
+  
+  This program is distributed in the hope that it will be useful, but 
+  WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or 
+  FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more 
+  details. 
+
+  You should have received a copy of the GNU General Public License
+  along with this program; if not, write to the Free Software Foundation,
+  Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
+--> 
 
 <!DOCTYPE html>
 <html lang="en">
