Fix minor issues

--- a/color.html
+++ b/color.html
@@ -32,12 +32,12 @@
 				<h4>Fundamental resources about HTML5 &amp; friends</h4>
 			</div>
 			<nav>
-      	<a id="current" href="home.html">Home</a>
+      	<a href="home.html">Home</a>
       	<div class="dropdown">
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
-      			<a href="">2</a>
+      			<a href="images.html">Images</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -56,7 +56,7 @@
       		</div>
       	</div>
       	<div class="dropdown">
-      		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
+      		<button id="current" class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="selectors.html">Selectors</a>
       			<a href="color.html">Color</a>
