--- a/elements.html
+++ b/elements.html
@@ -34,10 +34,10 @@
 			<nav>
       	<a href="home.html">Home</a>
       	<div class="dropdown">
-      		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
+      		<button id="current" class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
-      			<a href="">2</a>
+      			<a href="images.html">Images</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -45,7 +45,7 @@
       		</div>
       	</div>
 				<div class="dropdown">
-      		<button id="current" class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
+      		<button class="dropbtn">HTML5<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="updated-tags.html">Updated Tags</a>
       			<a href="updated-elements.html">Updated Elements</a>
@@ -111,7 +111,7 @@
 						group related content. This element does not inherently represent 
 						anything, in other words it hasn't got any semantic meaning. The 
 						&lt;div&gt; element should be used <em>only</em> when no other 
-						semantic element(i.e. &lt;article&gt;, &lt;section&gt;, ...) is 
+						semantic element(e.g. &lt;article&gt;, &lt;section&gt;) is 
 						appropriate. This element is mainly used for styling purposes.
 					</p>
 					<h4>Example</h4>
@@ -134,12 +134,14 @@
 						<p>
 							.byline-wrapper {<br>
 							&nbsp;&nbsp;<i>declarations;</i><br>
-							}<br>
-							<br>
+							}
+						</p>
+						<p>
 							.byline-wrapper img {<br>
 							&nbsp;&nbsp;<i>declarations;</i><br>
-							}<br>
-							<br>
+							}
+						</p>
+						<p>
 							.byline-wrapper p {<br>
 							&nbsp;&nbsp;<i>declarations;</i><br>
 							}
