--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
-      			<a href="">2</a>
+      			<a href="images.html">Images</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -131,7 +131,7 @@
 					<h3>Consistency in Handling Malformed Documents</h3>
 					<h4>Description</h4>
 					<p>
-						HTML supports "tag soup"(i.e. &lt;p&gt;This is a malformed fragment of
+						HTML supports "tag soup"(e.g. &lt;p&gt;This is a malformed fragment of
 						&lt;em&gt;HTML.&lt;/p&gt;&lt;/em&gt;) or the ability to write malformed 
 						code that is syntactically or structurally incorrect. Prior to 
 						HTML5, there was no standard way to correct malformed code in order 
