--- a/new-elements.html
+++ b/new-elements.html
@@ -37,7 +37,7 @@
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
-      			<a href="">2</a>
+      			<a href="images.html">Images</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -126,7 +126,7 @@
 							&nbsp;&nbsp;&lt;h2&gt;Blog&lt;/h2&gt;<br>
 							&nbsp;&nbsp;&lt;p&gt;This is the Art Gallery blog.&lt;p&gt;<br>
 							&nbsp;&nbsp;...<br>
-							&lt;/div&gt;<br>
+							&lt;/div&gt;
 						</p>
 					</div>
 					<h5>HTML5</h5>
@@ -136,7 +136,7 @@
 							&nbsp;&nbsp;&lt;h2&gt;Blog&lt;/h2&gt;<br>
 							&nbsp;&nbsp;&lt;p&gt;This is the Art Gallery blog.&lt;p&gt;<br>
 							&nbsp;&nbsp;...<br>
-							&lt;/section&gt;<br>
+							&lt;/section&gt;
 						</p>
 					</div>
 					<p>
@@ -149,10 +149,11 @@
 					<h4>Description</h4> 
 					<p>
 						A "header" represents a group of introductory content to a web page. 
-						This will usually contain a heading, metadata(i.e. post date) and/or 
-						navigational aids(i.e. clickable logo, table of content within a "nav" 
-						element). You can include more than one "header" element on your page 
-						but it usually appears at the top of a document or section.
+						This will usually contain a heading, metadata(e.g. post date) and/or 
+						navigational aids(e.g. clickable logo, table of content within a 
+						"nav" element). You can include more than one "header" element on 
+						your page but it usually appears at the top of a document or 
+						section.
 					</p>
 					<h4>Example:</h4>
 					<h5>HTML (Prior to HTML5)</h5>
@@ -162,7 +163,7 @@
 							&nbsp;&nbsp;&lt;h1&gt;Art Gallery Blog&lt;/h1&gt;<br>
 							&nbsp;&nbsp;&lt;p&gt;Covering all the Art Galleries across the globe
 							&lt;/p&gt;<br>
-							&lt;/div&gt;<br>
+							&lt;/div&gt;
 						</p>
 					</div>
 					<h5>HTML5</h5>
@@ -172,7 +173,7 @@
 							&nbsp;&nbsp;&lt;h1&gt;Art Gallery Blog&lt;/h1&gt;<br>
 							&nbsp;&nbsp;&lt;p&gt;Covering all the Art Galleries across the globe
 							&lt;/p&gt;<br>
-							&lt;/header&gt;<br>
+							&lt;/header&gt;
 						</p>
 					</div>
 					<p>
@@ -196,7 +197,7 @@
 						<p>
 							&lt;div class="footer"&gt;<br>
 							&nbsp;&nbsp;&lt;p&gt;&copy; Art Gallery 2017&lt;/p&gt;<br>
-							&lt;/div&gt;<br>
+							&lt;/div&gt;
 						</p>
 					</div>
 					<h5>HTML5</h5>
@@ -204,7 +205,7 @@
 						<p>
 							&lt;footer&gt;<br>
 							&nbsp;&nbsp;&lt;p&gt;&copy; Art Gallery 2017&lt;/p&gt;<br>
-							&lt;/footer&gt;<br>
+							&lt;/footer&gt;
 						</p>
 					</div>
 					<p>
@@ -216,10 +217,10 @@
 					<h3>Address</h3>
 					<h4>Description</h4>
 					<p>
-						The "address" element represents the contact information(i.e. author's 
-						website or email address) for an article or web page and is not 
-						intended for marking up postal addresses. The "address" element is 
-						often used within the "footer".
+						The "address" element represents the contact information(i.e. 
+						author's website and email address) for an article or web page and 
+						is not intended for marking up postal addresses. The "address" 
+						element is often used within the "footer".
 					</p>
 					<h5>HTML5</h5>
 					<div class="code-wrapper">
@@ -231,7 +232,7 @@
 							&gt;PictureElement&lt;/a&gt;<br>
 							&nbsp;&nbsp;&lt;/address&gt;<br>
 							&nbsp;&nbsp;&lt;p&gt;Copyright PictureElement 2017&lt;/p&gt;<br>
-							&lt;\footer&gt;<br>
+							&lt;\footer&gt;
 						</p>
 					</div>
 				</section>
@@ -249,16 +250,16 @@
 					</p>
 					<h4>Example</h4>
 					<p>
-						A page sidebar that includes filters(i.e. All, Recently Added, 
-						Recently Updated, Discontinued), about(i.e. Read more), and 
-						subscribe(i.e. Enter your email...) contents.
+						A page sidebar that includes filters(e.g. All, Recently Added, 
+						Recently Updated, Discontinued), about(e.g. Read more), and 
+						subscribe contents.
 					</p> 
 					<h5>HTML (Prior to HTML5)</h5>
 					<div class="code-wrapper">
 						<p>
 							&lt;div class="sidebar"&gt;<br>
 							&nbsp;&nbsp;...<br>
-							&lt;/div&gt;<br>
+							&lt;/div&gt;
 						</p>
 					</div>
 					<h5>HTML5</h5>
@@ -266,7 +267,7 @@
 						<p>
 							&lt;aside&gt;<br>
 							&nbsp;&nbsp;...<br>
-							&lt;/aside&gt;<br>
+							&lt;/aside&gt;
 						</p>
 					</div>
 					<p>
@@ -285,7 +286,7 @@
 					</p>
 					<h4>Example</h4>
 					<p>
-						A page navigation menu(i.e. Gear, Gaming, Culture, Entertainment, 
+						A page navigation menu(e.g. Gear, Gaming, Culture, Entertainment, 
 						Science, Video, Reviews, International Edition).
 					</p> 
 					<h5>HTML (Prior to HTML5)</h5>
@@ -293,7 +294,7 @@
 						<p>
 							&lt;ul class="nav"&gt;<br>
 							&nbsp;&nbsp;...<br>
-							&lt;/ul&gt;<br>
+							&lt;/ul&gt;
 						</p>
 					</div>
 					<h5>HTML5</h5>
@@ -303,7 +304,7 @@
 							&nbsp;&nbsp;&lt;ul&gt;<br>
 					 		&nbsp;&nbsp;&nbsp;&nbsp;...<br>
 					 		&nbsp;&nbsp;&lt;/ul&gt;<br>
-							&lt;/nav&gt;<br>
+							&lt;/nav&gt;
 						</p>
 					</div>
 					<p>
@@ -331,7 +332,7 @@
 						<p>
 							&lt;div class="article"&gt;<br>
 							&nbsp;&nbsp;...<br>
-							&lt;/div&gt;<br>
+							&lt;/div&gt;
 						</p>
 					</div>
 					<h5>HTML5</h5>
@@ -339,7 +340,7 @@
 						<p>
 							&lt;article&gt;<br>
 							&nbsp;&nbsp;...<br>
-							&lt;/article&gt;<br>
+							&lt;/article&gt;
 						</p>
 					</div>
 					<p>
@@ -363,7 +364,7 @@
 						<p>
 							&lt;div class="main"&gt;<br>
 							&nbsp;&nbsp;....<br>
-							&lt;/div&gt;<br>
+							&lt;/div&gt;
 						</p>
 					</div>
 					<h5>HTML5</h5>
@@ -371,7 +372,7 @@
 						<p>	
 							&lt;main&gt;<br>
 							&nbsp;&nbsp;...<br>
-							&lt;/main&gt;<br>
+							&lt;/main&gt;
 						</p>
 					</div>
 					<p>
@@ -393,7 +394,7 @@
 						<p>
 							&lt;div class="image"&gt;<br>
 							&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
-							&lt;/div&gt;<br>
+							&lt;/div&gt;
 						</p>
 					</div>
 					<h5>HTML5</h5>
@@ -401,7 +402,7 @@
 						<p>
 							&lt;figure&gt;<br>
 							&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
-							&lt;/figure&gt;<br>
+							&lt;/figure&gt;
 						</p>
 					</div>
 					<p>
@@ -423,7 +424,7 @@
 							&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
 							&nbsp;&nbsp;&lt;figcaption&gt;This is a caption for the picture.
 							&lt;/figcaption&gt;<br>
-							&lt;/figure&gt;<br>
+							&lt;/figure&gt;
 						</p>
 					</div>
 					<p>
