--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -37,7 +37,7 @@
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
-      			<a href="">2</a>
+      			<a href="images.html">Images</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -125,7 +125,7 @@
 							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Solaris"&gt;<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="FreeBSD"&gt;<br>
 							&nbsp;&nbsp;&lt;/datalist&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<p>
