--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -37,7 +37,7 @@
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
-      			<a href="">2</a>
+      			<a href="images.html">Images</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -146,7 +146,7 @@
 							&lt;input type="text" name="first-name" 
 							placeholder="First name"&gt;<br>
 							&lt;input type="text" name="last-name" placeholder="Last name"&gt;<br>
-							&lt;input type="text" name="email" placeholder="email"&gt;<br>
+							&lt;input type="text" name="email" placeholder="email"&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -173,7 +173,7 @@
 							&nbsp;&nbsp;Username:&lt;input type="text" name="username" 
 							autofocus&gt;<br>
 							&nbsp;&nbsp;Password:&lt;input type="password" name=:"psw"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -204,7 +204,7 @@
 				  		&nbsp;&nbsp;Password: &lt;input type="password" name="userpsw" 
 				  		required&gt;<br>
 				  		&nbsp;&nbsp;&lt;input type="submit"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
