--- a/selectors.html
+++ b/selectors.html
@@ -32,12 +32,12 @@
 				<h4>Fundamental resources about HTML5 &amp; friends</h4>
 			</div>
 			<nav>
-      	<a id="current" href="home.html">Home</a>
+      	<a href="home.html">Home</a>
       	<div class="dropdown">
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
-      			<a href="">2</a>
+      			<a href="images.html">Images</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -56,7 +56,7 @@
       		</div>
       	</div>
       	<div class="dropdown">
-      		<button class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
+      		<button id="current" class="dropbtn">CSS<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="selectors.html">Selectors</a>
       			<a href="color.html">Color</a>
@@ -115,8 +115,8 @@
           <div class="code-wrapper">
             <p>
               ul li {<br>
-                font-size: 24px;<br>
-              }<br>
+              &nbsp;&nbsp;font-size: 24px;<br>
+              }
             </p>
           </div>
           <p>
@@ -141,14 +141,14 @@
 	          <div class="code-wrapper">
 	            <p>
 	              a {<br>
-	                text-decoration: none;<br>
-	              }<br>
+	              &nbsp;&nbsp;text-decoration: none;<br>
+	              }
 	            </p>
 	            <p>
 	              a:hover {<br>
-	                text-decoration: underline;<br>
-	                color: darkred;<br>
-	              }<br>
+	              &nbsp;&nbsp;text-decoration: underline;<br>
+	              &nbsp;&nbsp;color: darkred;<br>
+	              }
 	            </p>
 	         	</div>
 	         	<li>
@@ -161,18 +161,18 @@
 	            <p>
 	              ...<br>
 	              &lt;ul&gt;<br>
-	                &lt;li&gt;2 egss&lt;/li&gt;<br>
-	                &lt;li&gt;1 pound of sugar&lt;/li&gt;<br>
+	              &nbsp;&nbsp;&lt;li&gt;2 egss&lt;/li&gt;<br>
+	              &nbsp;&nbsp;&lt;li&gt;1 pound of sugar&lt;/li&gt;<br>
 	              &lt;/ul&gt;<br>
-	              ...<br>
+	              ...
 	            </p>
           	</div>
           	<h5>CSS</h5>
 	          <div class="code-wrapper">
 	            <p>
 	              ul li:first-child {<br>
-	                color: red;<br>
-	              }<br>
+	              &nbsp;&nbsp;color: red;<br>
+	              }
 	            </p>
 	          </div>
         </section>
