--- a/updated-tags.html
+++ b/updated-tags.html
@@ -37,7 +37,7 @@
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
-      			<a href="">2</a>
+      			<a href="images.html">Images</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -139,7 +139,7 @@
 						the "b" tag can be used when you want to draw attention without 
 						increasing importance. It is a good practice to use the "class" 
 						attribute on the "b" tag in order to convey additional semantic 
-						information(i.e. &lt;b class="lead"&gt; for the first sentence in a 
+						information(e.g. &lt;b class="lead"&gt; for the first sentence in a 
 						paragraph). The "b" tag doesn't convey semantic information; use it 
 						only when no others fit.Do not mark titles and headings using the "b" 
 						tag.
