--- a/new-input-types.html
+++ b/new-input-types.html
@@ -37,7 +37,7 @@
       		<button class="dropbtn">HTML<span class="arrow">&#9660;</span></button>
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
-      			<a href="">2</a>
+      			<a href="images.html">Images</a>
       			<a href="">3</a>
       			<a href="">4</a>
       			<a href="">5</a>
@@ -127,7 +127,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Search Google:<br>
 							&nbsp;&nbsp;&lt;input type="search" name="google-search"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -143,7 +143,7 @@
 					<h4>Description</h4>
 					<p>
 						&lt;input type="email"&gt; is a regular text input, but with added 
-						usability on mobile devices(i.e keyboard with email-related keys).
+						usability on mobile devices(i.e. keyboard with email-related keys).
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
@@ -152,7 +152,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;E-mail:<br>
 							&nbsp;&nbsp;&lt;input type="email" name="email"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -177,7 +177,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Add your homepage:<br>
 							&nbsp;&nbsp;&lt;input type="url" name="homepage"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -202,7 +202,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Telephone:<br>
 							&nbsp;&nbsp;&lt;input type="tel" name="usrtel"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -231,7 +231,7 @@
 							&nbsp;&nbsp;Enter a number (between 1 and 5):<br>
 							&nbsp;&nbsp;&lt;input type="number" name="number" min="1" 
 							max="5"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -259,7 +259,7 @@
 							&nbsp;&nbsp;&lt;p&gt;Range (0-50):&lt;/p&gt;<br>
 							&nbsp;&nbsp;&lt;input type="range" name="points" min="0" 
 							max="50"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -284,7 +284,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Select a month:<br>
 							&nbsp;&nbsp;&lt;input type="month" name="month-year"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -309,7 +309,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Select a week:<br>
 							&nbsp;&nbsp;&lt;input type="week" name="week-year"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -334,7 +334,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Birthday:<br>
 							&nbsp;&nbsp;&lt;input type="date" name="birthday"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -360,7 +360,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Exam (date and time):<br>
 							&nbsp;&nbsp;&lt;input type="datetime-local" name="exam-time"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -385,7 +385,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Exam (date and time):<br>
 							&nbsp;&nbsp;&lt;input type="datetime" name="exam-time"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -414,7 +414,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Select a time:<br>
 							&nbsp;&nbsp;&lt;input type="time" name="usrtime"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
@@ -439,7 +439,7 @@
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Pick a color:<br>
 							&nbsp;&nbsp;&lt;input type="color" name="usrcolor"&gt;<br>
-							&lt;/form&gt;<br>
+							&lt;/form&gt;
 						</p>
 					</div>
 					<h5>Result</h5>
