--- a/fonts.html
+++ b/fonts.html
@@ -202,7 +202,50 @@
         <section>
           <h3>font-size property</h3>
           <h4>Description</h4>
-        </section>
+          <p>The <i>font-size</i> property specifies the size of the font.</p>
+          <h4>Usage</h4>
+          <h5>CSS</h5>
+          <div class="code-wrapper">
+            <p>
+            	<i>element</i> {<br>
+              &nbsp;&nbsp;font-size: <i>keyword</i> | <i>length</i> | <i>percentage</i>;<br>
+              }
+            </p>
+          </div>
+          <p>
+          	where:
+          	<ul>
+          		<li>
+          			<i>keyword</i> equals:
+		          	<ul>
+		          		<li><b>medium</b> - medium font size(default).</li>
+		          		<li><b>xx-small</b> - xx-small font size.</li>
+		          		<li><b>x-small</b> - x-small font size.</li>
+		          		<li><b>small</b> - small font size.</li>
+		          		<li><b>large</b> - large font size.</li>
+		          		<li><b>x-large</b> - x-large font size.</li>
+		          		<li><b>xx-large</b> - xx-large font size.</li>
+		          		<li><b>smaller</b> - smaller size than the parent element.</li> 
+		          		<li><b>larger</b> - larger size than the parent element.</li> 
+									<li><b>inherit</b> - inherit font size from parent element.</li> 
+								</ul>
+							</li>
+       				<li>
+          			<i>length</i> equals:
+		          	<ul>
+		          		<li><b><i>x</i>px</b></li>
+		          		<li><b><i>x</i>mm</b></li>
+		          		<li><b><i>x</i>em</b></li>
+		          		<li><b><i>x</i>ex</b></li>
+		          	</ul>
+          		</li>
+          		<li>
+      					<i>percentage</i> equals to <b><i>x</i>%</b> and refers to the 
+      					parent element's font size.
+          		</li>
+          	</ul>
+          </p>
+				</section>
         <section>
           <h3>text-transform property</h3>
           <h4>Description</h4>
